Fix alignment of the RTL text

BUG:392065
(cherry picked from commit cd9f29cdc08a7cba26f98651117cdab76bb55e23)